--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello World!!!</title>
 </head>
 <body>
-<h1>Hello Coursera!!! It's really great course.</h1>
+<h1>Hello Coursera!!! I am learning new things here!!!</h1>
 </body>
 </html>
